# mygpt-windows

./: .replit  IMPLEMENTATION_GUIDE.md  OLLAMA_CONFIG_GUIDE.md  OLLAMA_SETTINGS_GUIDE.ipynb  WINDOWS_BUILD_GUIDE.md  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  typecheck-output.txt
.github/workflows/: desktop-windows.yml
app-icons/: README.txt
artifacts/mockup-sandbox/: index.html
artifacts/mockup-sandbox/src/.generated/: mockup-components.ts
artifacts/student-ai/: index.html  package.json
artifacts/student-ai/.replit-artifact/: artifact.toml
artifacts/student-ai/src/: App.tsx  index.css
artifacts/student-ai/src/components/student-ai/: MainApp.tsx  OllamaSettings.tsx  api.ts
artifacts/student-ai/src/lib/: utils.ts
attached_assets/: Pasted-To-move-your-app-into-Specialist-Team-mode-you-need-to-_1776911319957.txt  Pasted-hi-i-have-an-idea-i-am-thinking-about-the-possibility-t_1776722000269.txt  Pasted-hi-i-have-an-idea-i-am-thinking-about-the-possibility-t_1776757276835.txt
desktop/: .gitignore  README.md  mygpt-backend.spec  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: backend.rs  main.rs
python-backend/: README.md  data_location.txt  main.py  model_location.txt  ollama_config.json  ollama_config_manager.py  ollama_manager.py  requirements.txt  setup_manager.py
python-backend/data/: llm_config.json  profile.json  studentai.db
python-backend/routes/: ollama_config.py  setup.py
(+2 files in other folders)
